# aquila-marketing-connector

./: .gitignore  Dockerfile  ervices update aquila-marketing-connector \  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: AppLayout.tsx  RunLogsModal.tsx  Sidebar.tsx  StatusBadge.tsx
client/src/hooks/: use-configs.ts  use-runs.ts
client/src/pages/: Configuration.tsx  Dashboard.tsx  SetupWizard.tsx
python/: .env.example  main.py  requirements.txt  smoke_test.py
python/config/: settings.py
python/connectors/: __init__.py  base.py  facebook_ads.py  ga4.py  google_ads.py  google_business.py  google_guaranteed.py  instagram.py  youtube.py
python/loader/: __init__.py  bigquery.py
python/schemas/: __init__.py  tables.py
server/: index.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
