[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "facebook-business>=24.0.1",
    "google-ads>=29.2.0",
    "google-analytics-data>=0.20.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-bigquery>=3.40.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
